[15.10.2025] Enhancing task No. 9